tdf#110743: Use page position to insert master page, not id

Fallback from c454fbb9b62164d5f047990ae63522c9fb932086

Change-Id: I8835f1a23feeb12d77963e621e8d9d59568420f2
(cherry picked from commit f4e5940abbbaa3c2747108b0954e8912d164f3e5)
Reviewed-on: https://gerrit.libreoffice.org/40633
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>